--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@paypal/react-paypal-js": "^8.8.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^11.4.0",
+    "flutterwave-react-v3": "^1.3.2",
     "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.29.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.4"
   },
   "devDependencies": {
