--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-paystack": "^6.0.0",
     "react-router-dom": "^6.29.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
